--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "^7.30.4",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.0.11",
     "eslint-plugin-styled-components-a11y": "^0.0.34",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
