--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.0.11",
+    "axios": "^0.21.1",
     "eslint-plugin-styled-components-a11y": "^0.0.34",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
